2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	Minor update of DmpDb documentation.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	New genmenu command line option --check-update.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* tools/genmenu.py:
	Add labels to non-menu actions in DMP forms.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Remove forgotten redundant condition from db_pytis_menu.py.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/types_.py:
	Add indicator to unfoldable items too in folding columns.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Add position_nsub to role menu views.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Add extended menu view to the role editing form.

2009-08-28  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Replace slashes with dots in the specification name before calling data_access_rights.
	

2009-08-27  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Display action types in action rights editing.

2009-08-27  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Use folding in role menu preview.

2009-08-27  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Display role purposes in DMP forms containing roles.

2009-08-27  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	DMP db admin documentation updated.

2009-08-26  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* lib/pytis/form/list.py:
	* lib/pytis/presentation/spec.py:
	New `initial_folding' specification parameter.

2009-08-26  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	* lib/pytis/presentation/types_.py:
	Show folding indicators only on rows without children (if known).

2009-08-26  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py: